--- a/font-face.css
+++ b/font-face.css
@@ -1,4 +1,34 @@
 @font-face {
+  font-family: "Lato lighter";
+  src: url("/assets/fonts/Lato-Light.ttf");
+  font-weight: lighter;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Lato regular";
+  src: url("/assets/fonts/Lato-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Lato bold";
+  src: url("/assets/fonts/Lato-Bold.ttf");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Lato black";
+  src: url("/assets/fonts/Lato-Black.ttf");
+  font-weight: 900;
+  font-style: normal;
+}
+
+
+
+@font-face {
   font-family: 'singolo';
   src: url('../assets/fonts/singolo.eot?49811475');
   src: url('../assets/fonts/singolo.eot?49811475#iefix') format('embedded-opentype'),
