--- a/singolo1.css
+++ b/singolo1.css
@@ -77,3 +77,121 @@ body {
 .active {
   color: #f06c64;
 }
+
+
+/* slider */
+.slider {
+  height: 594px;
+  
+  border-bottom: 6px solid #ea676b;
+  background-color: #f06c64;
+}
+
+.cards-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  width: 100%;
+  height: 100%;
+  
+  overflow: hidden;
+}
+
+.slider.item {
+  display: none;
+  position: relative;
+  margin: 0 auto;
+}
+
+.control {
+  width: 10%;
+  height: 100%;
+  cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  opacity: 0.3;
+  transition: opacity 0.3s;
+}
+
+.control.left {
+  order: 1;
+  transform: translateY(-3px);
+
+}
+
+.control.left:hover {
+  opacity: 0.6;
+  transition: opacity 0.3s;
+}
+
+.control.right {
+  order: 3;
+  transform: translate(4px,-3px);
+
+}
+
+.control.right:hover {
+  opacity: 0.6;
+  transition: opacity 0.3s;
+}
+ 
+.arrow {
+  font-size: 45px;
+}
+
+
+
+/* mobile */
+
+.card.active {
+  width: 80%;
+  order: 2;
+  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+.mobile {
+  /* width: 50%; */
+  
+}
+
+.vertical-mobile {
+  width: 240px;
+  height: 483px;
+  transform: translate(10px,-3px);
+
+  position: relative;
+
+  background-image: url(/assets/iPhone-Vertical.png);
+  background-repeat: no-repeat;
+}
+
+.vertical-mobile .screen {
+  position: absolute;
+  left: 14px;
+  top: 65px;
+}
+
+.horizon-mobile {
+  width: 483px;
+  height:240px;
+  transform: translate(-10px,-3px);
+
+  position: relative;
+
+  background-image: url(/assets/iPhone-Horizontal.png);
+  background-repeat: no-repeat;
+}
+
+.horizon-mobile .screen {
+  position: absolute;
+  top: 14px;
+  left: 60px;
+}
