--- a/singolo1.css
+++ b/singolo1.css
@@ -1,7 +1,7 @@
 @import "font-face.css";
 
 html {
-  font-family: "Lato regular" serif;
+  font-family: "Lato regular", serif;
   background: #fff;
 }
 
@@ -194,4 +194,87 @@ body {
   position: absolute;
   top: 14px;
   left: 60px;
+}
+
+/* slider end */
+
+.wrapper-1 { /*fix this later*/
+  margin: 0 auto;
+  width: 940px;
+}
+
+.our_services {
+  height: 453px;
+  padding-top: 41px;
+
+  background-color: #f2f2f2;
+  border-bottom: 6px solid #ffffff;
+}
+
+.h2 {
+  font-size: 30px;
+  line-height: 0.75;
+  letter-spacing: 0.3px;
+}
+
+.h3 {
+  margin: 0;
+  
+  font-family: "Lato Black", serif;
+  line-height: 0.6;
+  letter-spacing: -0.5px;
+  text-align: left;
+}
+
+.short-info {
+  margin-top: 16px;
+
+  font-size: 12px;
+  text-align: justify;
+  line-height: 1.72;
+}
+
+.preambul {
+  font-size: 16.7px;
+  text-align: justify;
+  line-height: 1.85;
+  letter-spacing: 0.5px;
+  word-wrap: break-word;
+}
+
+.info-badges {
+  padding-top: 29px;
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  
+  height: 280px;
+}
+
+.badge {
+  width: 305px;
+  height: 123px;
+
+  margin-right: 15px;
+
+  display: flex;
+  align-items: flex-start;
+}
+
+.the-icons {
+  font-size: 34px;
+  
+  padding: 3.6%;
+  margin: 0;
+  margin-right: 20px;
+  
+  border: 2px solid #767e9e;
+  border-radius: 50%;
+
+}
+
+.icon-bulb,
+.icon-phone {
+  padding: 11px 16px;
 }
