--- a/singolo2.css
+++ b/singolo2.css
@@ -4,4 +4,94 @@ body {
     width: 1020px;
 
     margin: 0 auto;
+    font-family: "Lato regular", serif;
+}
+
+.portfolio {
+    width: 100%;
+    height: 797px;
+
+    padding-top: 67px;
+    
+    background-color: #2d303a;
+
+    border-bottom: 6px solid #323746;
+
+    text-align: left;
+}
+
+.wrapper {
+    margin: 0 auto;
+    width: 940px;
+}
+
+.h2 {
+    font-size: 30px;
+    line-height: 0.75;
+    font-family: "Lato Black", sans-serif;
+    font-weight: 800;
+
+    color: #666d89;
+  }
+
+.portfolio .h2 {
+    margin: 0;
+}
+
+.preambul {
+    margin-top: 30px;
+    margin-bottom: 0px;
+
+    color: #767e9e;
+
+    font-size: 17px;
+    font-family: "Lato light";
+    text-align: left;
+    letter-spacing: 0.4px;
+}
+
+.portfolio-menu {
+    margin-top: 17.5px;
+}
+
+.nav-btn {
+    margin-right: 6px;
+    padding: 2.3px 7.1px;
+
+    border: 1px solid #767e9e;
+    border-radius: 5px;
+
+    font-size: 11.7px;
+    color: #767e9e;
+    text-decoration: none;
+
+    opacity: 1;
+    transition: 0.3s;
+}
+
+.nav-btn.active {
+    color: #dedede;
+    border-color: #dedede;
+}
+
+.nav-btn:hover {
+    color: #dedede;
+    border-color: #dedede;
+    opacity: 0.7;
+    transition: 0.3s;
+}
+
+/* galery */
+
+.galery {
+    margin-top: 23px;
+    height: 600px;
+
+    overflow: hidden;
+    
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+
+    grid-gap: 20px;
 }
