--- a/singolo2.css
+++ b/singolo2.css
@@ -26,6 +26,8 @@ body {
 }
 
 .h2 {
+    margin: 0;
+
     font-size: 30px;
     line-height: 0.75;
     font-family: "Lato Black", sans-serif;
@@ -94,4 +96,88 @@ body {
     grid-template-rows: 1fr 1fr 1fr;
 
     grid-gap: 20px;
+}
+
+/* about us */
+.about-us {
+    background-color: #f2f2f2;
+    border-bottom: 6px solid #ffffff;
+
+    padding-top: 66.5px;
+    padding-bottom: 0;
+
+    height: 661px;
+}
+
+.about-us .preambul {
+    margin: 0;
+    margin-top: 24px;
+    text-align: justify;
+    line-height: 1.78;
+}
+
+
+.staff {
+    margin-top: 45px;
+
+    width: 100%;
+    
+    display: flex;
+    justify-content: space-between;
+}
+
+.employee {
+    width: 300px;
+}
+
+.h3 {
+    margin: 0;
+    margin-top: 12px;
+
+    letter-spacing: -0.6px;
+
+    color: #767e9e;
+    font-family: "Lato Black", sans-serif;
+}
+
+.employee .info {
+    margin: 0;
+    margin-top: 10px;
+
+    color: #767e9e;
+    line-height: 1.9;
+    letter-spacing: 0.35px;
+    word-wrap: break-word;
+
+    font-size: 11px;
+    text-align: justify;
+}
+
+.social {
+    margin-top: 24px;
+
+    width: 153px;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.social-icon {
+    margin: 0;
+
+    padding: 7px;
+    color: #666d89;
+
+    border: 1px solid ;
+    border-color: #666d89;
+    border-radius: 50%;
+
+    transition: color  0.5s;
+}
+
+.social-icon:hover {
+    transition: 'border-color' 0.7s;
+    color: #2d303a;
+    /* border-color: #2d303a; */
+    transition: color 0.5s;
 }
