--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 @import "font-face.css";
 
 html {
-    font-family: "Lato regular", serif;
+    font-family: "Lato", sans-serif;
+    font-weight: normal;
+    font-style: normal;
     background: #fff;
 }
 
@@ -58,7 +60,8 @@ body {
     display: block;
     padding: 40px 0 30px;
 
-    font-family: "Lato bold", serif;
+    font-family: "Lato", sans-serif;
+    font-weight: bold;
     font-size: 13px;
     color: #fff;
     text-decoration: none;
@@ -217,7 +220,8 @@ body {
 .our_services .h2 {
     margin-bottom: 35px;
     
-    font-family: "Lato black", sans-serif;
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
     font-size: 30px;
     line-height: 0;
     letter-spacing: -0.2px;
@@ -236,7 +240,8 @@ body {
 .our_services .h3 {
     margin: 0;
 
-    font-family: "Lato Black", serif;
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
     line-height: 0.6;
     letter-spacing: -0.5px;
     text-align: left;
@@ -299,8 +304,8 @@ body {
 
     font-size: 30px;
     line-height: 0.75;
-    font-family: "Lato Black", sans-serif;
-    font-weight: 800;
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
 
     color: #666d89;
 }
@@ -309,7 +314,8 @@ body {
     margin-top: 30px;
     margin-bottom: 0px;
 
-    font-family: "Lato light";
+    font-family: "Lato", sans-serif;
+    font-weight: lighter;
     font-size: 17px;
     color: #767e9e;
     text-align: left;
@@ -385,8 +391,8 @@ body {
     font-size: 30px;
     line-height: 0.7;
     letter-spacing: -0.1px;
-    font-family: "Lato Black", sans-serif;
-    font-weight: 800;
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
 
     color: #666d89;
 }
@@ -418,7 +424,8 @@ body {
     margin-top: 13px;
 
     color: #767e9e;
-    font-family: "Lato Black", sans-serif;
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
     line-height: 1;
     letter-spacing: -0.7px;
 }
@@ -474,7 +481,8 @@ body {
     margin: 0;
     
     color: #f0d8d9;
-    font-family: "Lato black", sans-serif;
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
     font-size: 30px;
     letter-spacing: -0.2px;
 }
@@ -486,10 +494,10 @@ body {
     color: #f0d8d9;
 
     font-size: 17px;
-    font-family: "Lato light";
+    font-family: "Lato", sans-serif;
+    font-weight: lighter;
     text-align: justify;
     line-height: 1.8;
-    letter-spacing: 0.4px;
 }
 
 .get_a_quote .feedback {
@@ -561,7 +569,8 @@ body {
     width: 200px;
 
     color: #f0d8d9;
-    font-family: "Lato Black", sans-serif;
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
     transition: "width"0s;
     transition: 0.3s;
 
@@ -608,7 +617,7 @@ body {
 
     margin: 0;
 
-    font-family: "Lato black", sans-serif;
+    font-family: "Lato", sans-serif;
     font-weight: 900;
     font-size: 18px;
     line-height: 1;
@@ -643,7 +652,8 @@ body {
     color: #f0d8d9;
 
     text-decoration: none;
-    font-family: "Lato regular", sans-serif;
+    font-family: "Lato", sans-serif;
+    font-weight: normal;
     font-size: 11.5px;
     letter-spacing: 0.2px;
 }
@@ -762,7 +772,8 @@ s
 }
 
 .message .result {
-    font-family: "Lato regular", sans-serif;
+    font-family: "Lato", sans-serif;
+    font-weight: normal;
     font-style: italic;
 }
 
@@ -778,4 +789,3 @@ s
     color: white;
     background-color: #d6564f;
 }
-
