--- a/style.css
+++ b/style.css
@@ -370,6 +370,19 @@ body {
     grid-gap: 20px;
 }
 
+.galery-item {
+    width: 100%;
+    height: 100%;
+}
+
+.galery .active {
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0px 0px 0px 5px #F06C64;
+    border: 5px solid #F06C64;
+    box-sizing: border-box;
+}
+
 
 /* about us */
 .about-us {
