--- a/style.css
+++ b/style.css
@@ -101,8 +101,10 @@ body {
 .slider {
     height: 594px;
 
-    border-bottom: 6px solid #ea676b;
+    border-bottom: 6px solid;
+    border-color: #ea676b;
     background-color: #f06c64;
+    user-select: none;
 }
 
 .cards-container {
@@ -162,6 +164,10 @@ body {
 }
 
 /* mobile */
+.card {
+    display: none;
+}
+
 
 .card.active {
     order: 2;
@@ -205,6 +211,55 @@ body {
     top: 14px;
     left: 60px;
 }
+
+/* card 2 */
+.vertical-mobile.big {
+    /* display: none; */
+    height: 515px;
+    width: 268px;
+    background-size: contain;
+    transform: translate(5px,3px);
+    z-index: 100;
+}
+
+.second .vertical-mobile.big .screen {
+    width: 202.5px;
+
+    
+    position: absolute;
+    left: 14px;
+    top: 69px;
+}
+
+.vertical-mobile.little {
+    height: 313px;
+    width: 168px;
+    background-size: contain;
+    opacity: 0.5;
+}
+
+.vertical-mobile.little.left {
+    transform: translate(149px,13px);
+}
+
+.vertical-mobile.little.right {
+    transform: translate(-140px,13px);
+}
+
+.vertical-mobile.little.left .screen {
+    transform: translateX(-1.5px);
+}
+
+.second .vertical-mobile.little .screen {
+    height: 216px;
+    width: 121px;
+
+    position: absolute;
+    left: 10px;
+    top: 42px;
+}
+
+
 
 /* OUR SERVECES */
 
