--- a/style.css
+++ b/style.css
@@ -212,6 +212,44 @@ body {
     left: 60px;
 }
 
+.screen.hidden {
+    display: none;
+}
+
+.phone-btn {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+
+    cursor: pointer;
+}
+
+.phone-btn.vertical {
+    bottom: 30px;
+    left: 34%;
+}
+
+.phone-btn.horizon {
+    top: 35%;
+    left: 5px;
+}
+
+
+.phone-btn.big {
+    bottom: 6%;
+    left: 34%;
+}
+
+.phone-btn.little {
+    width: 30px;
+    height: 30px;
+
+    bottom: 6%;
+    left: 33%;
+}
+
+
 /* card 2 */
 .vertical-mobile.big {
     /* display: none; */
