--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ html {
     font-weight: normal;
     font-style: normal;
     background: #fff;
+
+    scroll-behavior: smooth;
+    transition: scroll-behavior 0.3s;
 }
 
 body {
@@ -27,13 +30,30 @@ body {
 }
 
 .page-header {
+    position: fixed;
+    top: 0;
+
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
+    
+    padding: 0 40px;
+
     height: 89px;
+    /* max-width: 1024px; */
+
+    z-index: 999;
 
     background-color: #2d303a;
     border-bottom: 6px solid #323746;
+}
+
+.content:before {
+	display: block;
+	content: "";
+	height: 96px;
+	/* margin: -96px 0 0; */
 }
 
 .page-header .wrapper {
@@ -99,7 +119,7 @@ body {
 
 /* slider */
 .slider {
-    height: 594px;
+    height: calc(594px + 96px);
 
     border-bottom: 6px solid;
     border-color: #ea676b;
@@ -302,7 +322,7 @@ body {
 /* OUR SERVECES */
 
 .our_services {
-    height: 441px;
+    height: calc(441px + 96px);
     padding-top: 53px;
 
     border-bottom: 6px solid #ffffff;
@@ -382,7 +402,7 @@ body {
 }
 
 .portfolio {
-    height: 797px;
+    height: calc(797px + 96px);
     width: 100%;
     padding-top: 67px;
 
@@ -479,7 +499,7 @@ body {
 
 /* about us */
 .about-us {
-    height: 661px;
+    height: calc(661px + 96px);
     padding-top: 66.5px;
     padding-bottom: 0;
 
@@ -576,8 +596,8 @@ body {
 }
 
 .get_a_quote {
-    height: 587px;
-    padding-top: 61px;
+    height: calc(587px+96px);
+    /* padding-top: 61px; */
    
     background-color: #f06c64;
     border-bottom: 6px solid #ea676b;
